# gh-client

./: .gitignore  AGENT.md  Makefile  README.md  ROADMAP.md  TODO.md  deny.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_ipc.rs  lib.rs  main.rs
src-tauri/src/contract/: mod.rs
src-tauri/src/core/: command_registry.rs  error.rs  executor.rs  mod.rs  observability.rs  permission_resolver.rs  policy_guard.rs
src-tauri/src/desktop/: mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/actions/: command.rs  dto.rs  service.rs
src-tauri/src/features/auth/: command.rs  dto.rs  service.rs
src-tauri/src/features/discussions/: command.rs  dto.rs  service.rs
src-tauri/src/features/insights/: command.rs  dto.rs  service.rs
src-tauri/src/features/issues/: command.rs  dto.rs  service.rs
src-tauri/src/features/pages/: command.rs  dto.rs  service.rs
src-tauri/src/features/projects/: command.rs  dto.rs  mod.rs  service.rs
src-tauri/src/features/pull_requests/: command.rs  dto.rs  service.rs
src-tauri/src/features/releases/: command.rs  dto.rs  service.rs
src-tauri/src/features/repositories/: command.rs  dto.rs  service.rs
src-tauri/src/features/rulesets/: command.rs  dto.rs  service.rs
src-tauri/src/features/settings/: command.rs  dto.rs  service.rs
src-tauri/src/features/wiki/: command.rs  (+2 more)
src-tauri/src/frontend/: mod.rs
src-tauri/tests/: actions_live.rs  e2e_live.rs  issues_live.rs  p2_live.rs  pull_requests_live.rs  releases_live.rs  repositories_live.rs  settings_live.rs
(+75 files in other folders)
