[package]
name = "gh_client_backend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-plugin-opener"]
desktop-custom-protocol = ["desktop", "tauri/custom-protocol"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2" }

[[bin]]
name = "gh-client-desktop"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "gh-client-envelope-cli"
path = "src/bin/envelope_cli.rs"
